--- a/src/app/pages/calorie-counter/calorie-counter.component.scss
+++ b/src/app/pages/calorie-counter/calorie-counter.component.scss
@@ -1,3 +1,10 @@
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 .div-flex {
     display: flex;
     flex-direction: column;
@@ -6,6 +13,51 @@
     height: 100%;
 }
 
+mat-icon{
+    margin-right: 10px;
+}
+
+span{
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.mat-card-header{
+    align-items: center;
+}
+
 .main_component {
     height: 100vh;
+}
+
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
+
+mat-list-item{
+    border: 1px solid white;
+    border-collapse: collapse;
+}
+
+mat-list{
+    width: 50%;
+    justify-content: center;
+}
+
+form {
+    width: 30%;
+    text-align: center;
+}
+
+.div-card {
+    padding: 50px;
+}
+
+mat-form-field {
+    width: 100%;
+}
+
+mat-card-content {
+    text-align: center;
 }
