Final state everything is done multiple pipe usages, CRUD

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,10 @@
           <li *ngIf="loggedInUser"><a routerLink="/login" (click)="logout()">Logout</a></li>
           <li><a routerLink="/signup">Register</a></li>
           <li><a routerLink="/main">Main</a></li>
-          <li><a routerLink="/workout">Workout</a></li>
+          <li><a routerLink="/workout">Workouts</a></li>
           <li><a routerLink="/calorie-counter">Calorie Counter</a></li>
           <li><a routerLink="/contact">Contact</a></li>
+          <li><a routerLink="/profile">Profile</a></li>
         </ul>
       </div>
     </mat-toolbar>
