--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -27,6 +27,10 @@
         <mat-icon>info</mat-icon>
         <span>Contact</span>
     </a>
+    <a mat-list-item routerLink="/profile" (click)="close()">
+        <mat-icon>profile</mat-icon>
+        <span>Profile</span>
+    </a>
 </mat-nav-list>
 
 <!-- <select [(ngModel)]="currentPage" (change)="menuSwitch()">
