--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,18 +1,14 @@
 <div class="main_component">
     <div class="div-flex">
-        <h1>Register an account!</h1>
-        <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+        <h1>Your profile</h1>
+        <form [formGroup]="userModifyForm" (ngSubmit)="onSubmit()">
             <mat-form-field>
                 <mat-label for="email">Email: </mat-label>
                 <input matInput type="text" formControlName="email" required="required"/>
             </mat-form-field>
             <mat-form-field>
-                <mat-label for="password">Password: </mat-label>
-                <input matInput type="password" formControlName="password" required="required"/>
-            </mat-form-field>
-            <mat-form-field>
-                <mat-label for="rePassword">Confirm password: </mat-label>
-                <input matInput type="password" formControlName="rePassword" required="required"/>
+                <mat-label for="username">Username: </mat-label>
+                <input matInput type="text" formControlName="username" required="required"/>
             </mat-form-field>
             <div formGroupName="name" class="subForm">
                 <mat-form-field>
@@ -26,7 +22,7 @@
             </div>
             <div>
                 <span class="buttons">
-                    <button mat-raised-button color="primary" type="submit">Register</button>
+                    <button mat-raised-button color="primary" type="submit">Modify</button>
                 </span>
                 <span class="buttons">
                     <button mat-raised-button color="primary" (click)="goBack()">Back</button>
