--- a/src/app/pages/calorie-counter/calorie-counter.component.html
+++ b/src/app/pages/calorie-counter/calorie-counter.component.html
@@ -12,7 +12,7 @@
                       <h3 matListItemTitle>{{food.name}}</h3>
                       <p matListItemLine>
                         <span>{{food.calories | kcalKJ}} kcal</span>
-                        <span>{{food.protein}} mg</span>
+                        <span>{{food.protein}} g</span>
                         <span><button class="buttons" mat-raised-button color="primary" (click)="deleteFood(food.id)">Delete</button></span>
                       </p>
                     </mat-list-item>
